dynamically_typed_tests/invalid/variables/became_valid/undeclaredScopeVar.wacc
# assignment to variable not declared in current scope

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  begin 
  x = 5
  end ;
  x = 10
end
